@@ -20,9 +20,10 @@ package com.willwinder.ugs.nbp.designer.entities.cuttable;
 
 import com.willwinder.ugs.nbp.designer.entities.Entity;
 import com.willwinder.ugs.nbp.designer.entities.EntityGroup;
+import com.willwinder.ugs.nbp.designer.entities.EntitySetting;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -42,7 +43,7 @@ public class Group extends EntityGroup implements Cuttable {
                 .map(Cuttable::getCutType)
                 .filter(cutType -> cutType != CutType.NONE)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         if (!cutTypes.isEmpty()) {
             return cutTypes.get(0);
@@ -54,8 +55,8 @@ public class Group extends EntityGroup implements Cuttable {
     @Override
     public void setCutType(CutType cutType) {
         getChildren().forEach(child -> {
-            if (child instanceof Cuttable) {
-                ((Cuttable) child).setCutType(cutType);
+            if (child instanceof Cuttable cuttable) {
+                cuttable.setCutType(cutType);
             }
         });
     }
@@ -71,8 +72,8 @@ public class Group extends EntityGroup implements Cuttable {
     @Override
     public void setTargetDepth(double cutDepth) {
         getChildren().forEach(child -> {
-            if (child instanceof Cuttable) {
-                ((Cuttable) child).setTargetDepth(cutDepth);
+            if (child instanceof Cuttable cuttable) {
+                cuttable.setTargetDepth(cutDepth);
             }
         });
     }
@@ -88,8 +89,8 @@ public class Group extends EntityGroup implements Cuttable {
     @Override
     public void setStartDepth(double startDepth) {
         getChildren().forEach(child -> {
-            if (child instanceof Cuttable) {
-                ((Cuttable) child).setStartDepth(startDepth);
+            if (child instanceof Cuttable cuttable) {
+                cuttable.setStartDepth(startDepth);
             }
         });
     }
@@ -111,8 +112,8 @@ public class Group extends EntityGroup implements Cuttable {
     @Override
     public void setHidden(boolean hidden) {
         getChildren().forEach(child -> {
-            if (child instanceof Cuttable) {
-                ((Cuttable) child).setHidden(hidden);
+            if (child instanceof Cuttable cuttable) {
+                cuttable.setHidden(hidden);
             }
         });
     }
@@ -123,5 +124,19 @@ public class Group extends EntityGroup implements Cuttable {
         getChildren().stream().map(Entity::copy).forEach(copy::addChild);
         copy.setHidden(isHidden());
         return copy;
+    }
+
+    @Override
+    public List<EntitySetting> getSettings() {
+        return Arrays.asList(
+                EntitySetting.ANCHOR,
+                EntitySetting.POSITION_X,
+                EntitySetting.POSITION_Y,
+                EntitySetting.WIDTH,
+                EntitySetting.HEIGHT,
+                EntitySetting.CUT_TYPE,
+                EntitySetting.START_DEPTH,
+                EntitySetting.TARGET_DEPTH
+        );
     }
 }
